# rosprac

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fetch_and_convert_examples.bash  manifest.xml  package.xml
cram_log_mln/owl_memory_converter/: build.gradle  settings.gradle
cram_log_mln/owl_memory_converter/converter/src/main/java/de/hb/uni/marcniehaus/owl_memory_converter/converter/: OldPickAndPlacePolicy.java
cram_log_mln/owl_memory_converter/taskHierarchy/: pom.xml
cram_log_mln/owl_memory_converter/taskHierarchy/src/main/java/de/hb/uni/taskhierarchy/: Main.java  MainFrame.form  StatisticsPanel.java
cram_log_mln/robot_memory/: setup.py
cram_log_mln/robot_memory/src/robot_memory/: database_creator.py
cram_log_mln/robot_memory/test/: calculateWorldProbability.py  check_mlns.py
cram_robot_memory/: CMakeLists.txt  README.txt  cram-robot-memory.asd  package.xml
cram_robot_memory/config/: semrec.conf
cram_robot_memory/launch/: robot_memory.launch
cram_robot_memory/src/: designator-completion.lisp  general-queries.lisp  learning.lisp  package.lisp  success-estimation.lisp  utilities.lisp
cram_robot_memory_demo/: CMakeLists.txt  README.txt  cram-robot-memory-demo.asd  package.xml
cram_robot_memory_demo/launch/: colloquium_infrastructure.launch  colloquium_mln_server.launch  demo.launch
cram_robot_memory_demo/src/: bullet-environment.lisp  colloquium-demo.lisp  demo.lisp  environment.lisp  package.lisp  perceive-and-grasp-mug-demo.lisp  success-estimation-demo.lisp  utilities.lisp
cram_robot_memory_evaluation/: CMakeLists.txt  README.txt  cram-robot-memory-evaluation.asd  package.xml
cram_robot_memory_evaluation/data/: locations.csv  objects.csv
cram_robot_memory_evaluation/scripts/: calculate_statistics.py  execute-informed-test.lisp  execute-mln-completion-test.lisp  execute-naive-completion-test.lisp  execute-theoretical-test.lisp  execute_evaluation.bash  execute_evaluations.bash  execute_one_evaluation.bash  grasp-objects-for-comparison-test.lisp  grasp-objects-for-completion-test.lisp  grasp-objects-for-training.lisp  handle_objects_in_kitchen.lisp  sample_kitchens.py
cram_robot_memory_evaluation/src/: kitchen-evaluator.lisp  package.lisp
cram_robot_memory_test_utils/: CMakeLists.txt  README.txt  cram-robot-memory-test-utils.asd  package.xml
cram_robot_memory_test_utils/src/: bullet-environment.lisp  environment.lisp  package.lisp  utilities.lisp
cram_rosmln/: CMakeLists.txt  README.txt  cram-rosmln.asd  package.xml
cram_rosmln/src/: package.lisp  rosmln.lisp
launch/: rosprac.launch
msg/: action_role.msg
owl_memory_converter/: CMakeLists.txt  README.txt  build.gradle  package.xml  settings.gradle
owl_memory_converter/converter/: build.gradle
owl_memory_converter/converter/src/main/java/de/hb/uni/marcniehaus/owl_memory_converter/converter/: Constants.java  Main.java  OwlConverter.java  PreAndPostOrderTaskIterator.java  RobohowPickAndPlacePolicy.java
owl_memory_converter/srv/: Conversion.srv
owl_memory_converter/taskHierarchy/: build.gradle
owl_memory_converter/taskHierarchy/src/main/java/de/hb/uni/taskhierarchy/: MainFrame.java  StatisticsPanel.form  TaskPanel.form  TaskPanel.java
owl_memory_converter/tasktree/: build.gradle
owl_memory_converter/tasktree/src/main/java/de/hb/uni/marcniehaus/owl_memory_converter/tasktree/: Constants.java  MongoExtractor.java  OWLDesignator.java  OWLExtractor.java  Task.java
prolog/: init.pl  prac_client.pl
robot_memory/: README.txt
robot_memory/msg/: RobotState.msg
robot_memory/src/robot_memory/: database_creator.py  mln_creator.py  mln_elements.py  pracmln_adapter.py  robot_memory_constants.py  robot_state_preprocessor.py  ros_interface.py  task_tree.py  task_tree_preprocessor.py
robot_memory/test/: check.py  check_mln_object.py  check_mln_task.py  generate_mln_from_fictional_data.py
scripts/: prac_client.py  pracclient.py  pracserver.py  practell.py  rospracinfer.py  rospracinfer.sh.in  rospracutils.py  tools.py
src/java/edu/tum/cs/ias/knowrob/prac/: PracRosClient.java
srv/: Instructions.srv  PRACInfer.srv  PRACInferenceStep.srv
task_tree_msgs/: CMakeLists.txt  README.txt  package.xml
task_tree_msgs/msg/: Designator.msg  RobotState.msg
task_tree_msgs/srv/: LearningTrigger.srv
workspace/: .gitignore
workspace/src/owl_memory_converter/: CMakeLists.txt  package.xml
workspace/src/owl_memory_converter/converter/: build.gradle
workspace/src/owl_memory_converter/converter/src/main/java/de/hb/uni/marcniehaus/owl_memory_converter/converter/: Main.java  OldPickAndPlacePolicy.java  OwlConverter.java  PreAndPostOrderTaskIterator.java  RobohowPickAndPlacePolicy.java
workspace/src/owl_memory_converter/tasktree/: build.gradle
workspace/src/owl_memory_converter/tasktree/src/main/java/de/hb/uni/marcniehaus/owl_memory_converter/tasktree/: Constants.java  LogElement.java  MongoErrorElement.java  MongoExtractor.java  MongoLogElement.java  OWLExtractor.java  OWLLogElement.java  Task.java
workspace/src/robot_memory/: CMakeLists.txt  package.xml
workspace/src/robot_memory/msg/: Object.msg  ObjectProperty.msg  RobotState.msg
workspace/src/robot_memory/src/robot_memory/: database_creator.py  mln_creator.py  mln_elements.py  pracmln_adapter.py  robot_memory_constants.py  robot_state_preprocessor.py  weight_calculator.py
workspace/src/robot_memory/srv/: LearningTrigger.srv
workspace/src/robot_memory/test/: check.py  check_mln_inputOutput.py  check_mln_object.py  check_mln_objects.py  check_mln_statemachine.py  check_mln_task.py  check_mlns.py  generate_mln_from_fictional_data.py  start_owl_memory_converter.py  test.py
