<?xml version="1.0"?>
<package>
  <name>cram_robot_memory</name>
  <version>0.0.0</version>
  <description>The cram_robot_memorypackage</description>
  <maintainer email="mniehaus@informatik.uni-bremen.de">Marc Niehaus</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cram_rosmln</build_depend>
  <build_depend>roslisp</build_depend>
  <run_depend>cram_rosmln</run_depend>
  <run_depend>roslisp</run_depend>
  <export></export>
</package>
