<?xml version="1.0"?>
<package format="2">
  <name>cram_robot_memory</name>
  <version>0.0.1</version>
  <description>Lisp interface providing queries the MLNs created by the robot_memory package</description>
  <maintainer email="mniehaus@informatik.uni-bremen.de">Marc Niehaus</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>cram_rosmln</depend>
  <depend>roslisp</depend>
  <depend>owl_memory_converter</depend>
  <depend>cram_beliefstate</depend>
  <export></export>
</package>
