<?xml version="1.0"?>
<package format="2">
  <name>cram_robot_memory_demo</name>
  <version>0.0.1</version>
  <description>Demo presenting the capabilities of the robot_memory package</description>
  <maintainer email="mniehaus@informatik.uni-bremen.de">Marc Niehaus</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>cram_robot_memory_test_utils</depend>
  <export></export>
</package>
