<?xml version="1.0"?>
<package format="2">
  <name>cram_robot_memory_evaluation</name>
  <version>0.0.0</version>
  <description>Evaluation of the robot_memory package in Marcs masters thesis</description>
  <maintainer email="mniehaus@informatik.uni-bremen.de">Marc Niehaus</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>cram_robot_memory_test_utils</depend>
  <export></export>
</package>
