<?xml version="1.0"?>
<package format="2">
  <name>cram_robot_memory_test_utils</name>
  <version>0.0.1</version>
  <description>Utilities for the cram_robot_memory_evaluation and the cram_robot_memory_demo (Reuses code from the spatial_relations_demo)</description>
  <maintainer email="mniehaus@informatik.uni-bremen.de">Marc Niehaus</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>cram_robot_memory</depend>
  <depend>cram_spatial_relations_costmap</depend>
  <depend>cl_urdf</depend>
  <depend>cram_designators</depend>
  <depend>cram_location_costmap</depend>
  <depend>cram_prolog</depend>
  <depend>roslisp</depend>
  <depend>roslisp_utilities</depend>
  <depend>cram_semantic_map_costmap</depend>
  <depend>cram_semantic_map_utils</depend>
  <depend>cram_robot_pose_gaussian_costmap</depend>
  <depend>cram_bullet_reasoning</depend>
  <depend>cram_pr2_description</depend>
  <depend>cram_bullet_reasoning_belief_state</depend>
  <depend>cram_pr2_synch_projection_pms</depend>
  <depend>cram_occupancy_grid_costmap</depend>
  <depend>cram_plan_library</depend>
  <depend>cram_bullet_reasoning_designators</depend>
  <depend>cram_pr2_designators</depend>
  <depend>cram_semantic_map_designators</depend>
  <depend>cram_bullet_reasoning_utilities</depend>
  <depend>spatial_relations_demo</depend>
  <export></export>
</package>
