<?xml version="1.0"?>
<package>
  <name>cram_rosmln</name>
  <version>0.0.1</version>
  <description>The cram_rosmln package</description>
  <maintainer email="mniehaus@informatik.uni-bremen.de">Marc Niehaus</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslisp</build_depend>
  <build_depend>rosmln</build_depend>
  <run_depend>roslisp</run_depend>
  <run_depend>rosmln</run_depend>
  <export></export>
</package>
