<?xml version="1.0"?>
<package format="2">
  <name>cram_rosmln</name>
  <version>0.0.1</version>
  <description>Lisp wrapper for the rosmln interface of pracmln</description>
  <maintainer email="mniehaus@informatik.uni-bremen.de">Marc Niehaus</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslisp</depend>
  <depend>rosmln</depend>
  <depend>cram_language</depend>
  <export></export>
</package>
